--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <h2 class="card-title">Triangle</h2>
                         <p>Area (A) = 0.5 X b X h</p>
                         <p>
-                            <input type="text" class="border bg-gray-200 text-xl w-24 px-2" placeholder="base" name=""
+                            <input type="number" class="border bg-gray-200 text-xl w-24 px-2" placeholder="base" name=""
                                 id="triangle-base">
                             <span class="ml-2">cm</span>
-                            <input type="text" class="ml-4 border bg-gray-200 text-xl w-24 px-2" placeholder="height"
+                            <input type="number" class="ml-4 border bg-gray-200 text-xl w-24 px-2" placeholder="height"
                                 name="" id="triangle-height">
                             <span class="ml-2">cm</span>
                         </p>
@@ -136,6 +136,9 @@
             <!-- area calculator -->
             <div class="w-[300px]">
                 <div class="text-4xl">Area Calculator</div>
+                <div id="calculation-entry">
+                    
+                </div>
             </div>
         </div>
     </main>
